# eservices

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.bak  INSTALL  Makefile.in  README  TODO  aclocal.m4  config.guess  configure  configure.ac  dbase-structure  defines.h.in  mkinstalldirs  services.conf-dist  wrapper.pl
cores/: .placeholder
help/chanserv/: access  autoop  ban  banlist  chowner  clearmodes  comment  cycle  deop  deopme  devoice  disable  drop  enable  grep  info  invite  kick  kickban  list  noexpire  op  opme  register  removeme  showcommands  topic  unban  unreg  voice
help/multiserv/: stats
help/nickserv/: auth  chpass  comment  drop  forbid  ghost  info  pass  register  set  whois
help/operserv/: access  close  die  gline  mode  op  operlist  remoper  trace  ungline  who
include/: channels.h  chanserv.h  config.h  db_server.h  dbase.h  dcc.h  errors.h  help.h  log.h  main.h  misc_func.h  msg.h  multiserv.h  nicks.h  nickserv.h  operserv.h  p10.h  parser.h  queue.h  server.h  setup.h  timer.h
src/: .gitignore  Makefile.in  channels.c  chanserv.c  config.c  db_server.c  dbase.c  dcc.c  errors.c  help.c  log.c  main.c  misc_func.c  multiserv.c  nicks.c  nickserv.c  operserv.c  p10.c  parser.c  queue.c  server.c  timer.c  version.c
src/chanserv/: Makefile.in  access.c  autoop.c  ban.c  banlist.c  chowner.c  clearmodes.c  comment.c  cycle.c  deop.c  deopme.c  devoice.c  disable.c  drop.c  enable.c  grep.c  help.c  info.c  invite.c  kick.c  kickban.c  list.c  noexpire.c  op.c  opme.c  register.c  removeme.c  showcommands.c  topic.c  unban.c  unreg.c  voice.c
src/multiserv/: Makefile.in  help.c  stats.c
src/nickserv/: Makefile.in  auth.c  chpass.c  comment.c  drop.c  forbid.c  ghost.c  help.c  info.c  pass.c  register.c  register.c.bak  set.c  whois.c
src/nickserv/CVS/: Entries  Repository  Root
src/operserv/: .gitignore  Makefile.in  access.c  broadcast.c  die.c  gline.c  help.c  mode.c  op.c  operlist.c  remoper.c  trace.c  ungline.c
